--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -1,29 +1,13 @@
-/* Artfully masterminded by ZURB  */
+.apple{
+	font-size: 5em;
+}
 
-/* -------------------------------------------------- 
-   Table of Contents
------------------------------------------------------
-:: Shared Styles
-:: Page Name 1
-:: Page Name 2
-*/
+.boat{
+	color: #00F;
+}
 
-
-/* -----------------------------------------
-   Shared Styles
------------------------------------------ */
-
-
-
-/* -----------------------------------------
-   Page Name 1
------------------------------------------ */
-
-
-
-
-/* -----------------------------------------
-   Page Name 2
------------------------------------------ */
-
+.logo{
+	font-size: 3em;
+	font-weight: normal;
+}
 
